[Minor] Updating the usage of Kafka in Test Containers and some general tidy up of warnings in build.